; ModuleID = '/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_queue_malloc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_queue_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@queues_cnt = common dso_local global i32 0, align 4
@qs = common dso_local global %struct.TYPE_6__* null, align 8
@queues_memory = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @queue_malloc() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = load i32, i32* @queues_cnt, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @queues_cnt, align 4
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** @qs, align 8
  %7 = icmp eq %struct.TYPE_6__* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %0
  %9 = call i64 (...) @dl_get_memory_used()
  %10 = load i32, i32* @queues_memory, align 4
  %11 = sext i32 %10 to i64
  %12 = sub nsw i64 %11, %9
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* @queues_memory, align 4
  %14 = call %struct.TYPE_6__* @dl_malloc0(i32 8)
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %2, align 8
  %15 = call i64 (...) @dl_get_memory_used()
  %16 = load i32, i32* @queues_memory, align 4
  %17 = sext i32 %16 to i64
  %18 = add nsw i64 %17, %15
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* @queues_memory, align 4
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  store %struct.TYPE_6__* %20, %struct.TYPE_6__** %1, align 8
  br label %30

21:                                               ; preds = %0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** @qs, align 8
  store %struct.TYPE_6__* %22, %struct.TYPE_6__** %3, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** @qs, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** @qs, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %28 = call i32 @memset(%struct.TYPE_6__* %27, i32 0, i32 8)
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  store %struct.TYPE_6__* %29, %struct.TYPE_6__** %1, align 8
  br label %30

30:                                               ; preds = %21, %8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  ret %struct.TYPE_6__* %31
}

declare dso_local i64 @dl_get_memory_used(...) #1

declare dso_local %struct.TYPE_6__* @dl_malloc0(i32) #1

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
